2002-09-12  John Levon  <levon@movementarian.org>

	* QCommandBuffer.C: fix click
 
2002-09-12  John Levon  <levon@movementarian.org>

	* QMathDialog.C: work around Qt bug in previous change
 
2002-09-12  John Levon  <levon@movementarian.org>

	* QMathDialog.h:
	* QMathDialog.C: load icon palettes on demand
 
2002-09-12  John Levon  <levon@movementarian.org>

	* QMathDialog.C: get the scrollbars right on first show
 
2002-09-11  John Levon  <levon@movementarian.org>

	* QPrint.h:
	* QPrint.C: 
	* ui/QPrintDialog.ui: update for odd/even changes
 
2002-09-11  John Levon  <levon@movementarian.org>

	* QCitationDialog.C: show right info when selecting a cite

	* QParagraphDialog.C: don't validate lengths, to allow glue
 
2002-09-11  Juergen Spitzmueller  <j.spitzmueller@gmx.de>

	* QFloatDialog.C: Fix the setEnable() logic

2002-09-11  John Levon  <levon@movementarian.org>

	* Alert_pimpl.C:
	* QExternalDialog.h: 
	* QExternalDialog.C: 
	* QGraphicsDialog.h: 
	* QGraphicsDialog.C: 
	* QIncludeDialog.h: 
	* QIncludeDialog.C: 
	* QIndexDialog.h: 
	* QIndexDialog.C: 
	* QSearchDialog.h: 
	* QSearchDialog.C: 
	* QURLDialog.h:
	* QURLDialog.C: focus on the first linedit on show() 
	 
2002-09-11  John Levon  <levon@movementarian.org>

	* QSearchDialog.C: fill combo boxes

2002-09-11  John Levon  <levon@movementarian.org>

	* qscreen.C: use repaint() not update() for immediate change

	* QContentPane.C: warning fix
 
2002-09-11  John Levon  <levon@movementarian.org>

	* qfont_metrics.C: fix button metrics

	* QLPainter.C: fillPolygon() should actually fill
 
2002-09-10  John Levon  <levon@movementarian.org>

	* Menubar_pimpl.C:
	* QLPopupMenu.h:
	* QLPopupMenu.C: finally fix Navigate
 
2002-09-10  John Levon  <levon@movementarian.org>

	* ui/QIncludeDialog.ui:
	* QInclude.h:
	* QInclude.C: remove don't typeset

	* Dialogs2.C: add empty showWrap

2002-09-08  John Levon  <levon@movementarian.org>

	* QFloat.C: another fix
 
2002-09-08  John Levon  <levon@movementarian.org>
