@@ -9,14 +9,6 @@ lyx_gui (qt)
 	- move out lyxserver
 	- do dpi (cannot easily fix)
  
-Menubar_pimpl
-
-	- implement openByName
-
-QAbout
-
-	- give good default size 
-
 QDocument
 
 	- implement me. Need MVC (Edwin is on this)
