@@ -1,5 +1,12 @@
 2002-09-12  John Levon  <levon@movementarian.org>
 
+	* Menubar_pimpl.C:
+	* Menubar_pimpl.h:
+	* QtView.C: implement openByName(). Move activated
+	signal to per-menu 
+
+2002-09-12  John Levon  <levon@movementarian.org>
+
 	* QCommandBuffer.C: fix click
  
 2002-09-12  John Levon  <levon@movementarian.org>
